solve layout shift

--- a/src/output.css
+++ b/src/output.css
@@ -762,10 +762,6 @@ body{
   gap: 70px;
 }
 
-.gap-\[7\]{
-  gap: 7;
-}
-
 .-space-x-\[6px\] > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(-6px * var(--tw-space-x-reverse));
@@ -966,14 +962,6 @@ body{
 .py-\[70px\]{
   padding-top: 70px;
   padding-bottom: 70px;
-}
-
-.pl-5{
-  padding-left: 1.25rem;
-}
-
-.pl-\[\]{
-  padding-left: ;
 }
 
 .pl-\[70px\]{
